fixed endgame shifting canvas upe

--- a/css/style.css
+++ b/css/style.css
@@ -38,7 +38,7 @@ body {
 }
 
 h1 {
-    margin: 0;
-    text-align: center;
+    position: absolute; 
+    left: 35%; 
     z-index: 1;
 }
